<resources>
    <string name="app_name">Trabalho Final</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="action_add">Adicionar</string>
    <string name="txt_nome">Nome:</string>
    <string name="txt_valor">Valor:</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_ok">OK</string>
</resources>